--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -61,9 +61,8 @@
           <div class="divider"></div>
 
           <ul class="menu">
-            <li><a href="/articles">Home</a></li>
-            <li><a href="/article/new">Create article</a></li>
-            <li><a href="http://prose.io/">http://prose.io/</a></li>
+            <li><a href="/">Home</a></li>
+            <!-- <li><a href="http://prose.io/">http://prose.io/</a></li> -->
             <li><a href="https://bitbucket.org/kostafey/kostafeys-emacs-confik/src/default/.emacs.d/solutions/clojure-offline.el?at=default">
                 elisp version</a></li>
           </ul>
