--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -6,10 +6,11 @@
                                    width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="keywords" content="clojure offline">
 
-    <link href="/css/modern.css" rel="stylesheet">
-    <link href="/css/modern-responsive.css" rel="stylesheet">
-    <link href="/css/site.css" rel="stylesheet" type="text/css">
-    <link href="/css/prettify.css" rel="stylesheet" type="text/css">
+    <!-- <link href="/css/modern.css" rel="stylesheet"> -->
+    <!-- <link href="/css/modern-responsive.css" rel="stylesheet"> -->
+    <!-- <link href="/css/site.css" rel="stylesheet" type="text/css"> -->
+    <!-- <link href="/css/prettify.css" rel="stylesheet" type="text/css"> -->
+    <link href="/css/search.css" rel="stylesheet" type="text/css">
 
     <script src="/js/ga.js" async="" type="text/javascript"></script>
     <script type="text/javascript" src="/js/jquery-1.js"></script>
@@ -31,7 +32,7 @@
 
     <title>Clojure offline - throw your modem pipboy</title>
   </head>
-  <body class="metrouicss" onload="prettyPrint()">
+  <body class="iron-body" onload="prettyPrint()">
 
 
     <script type="text/javascript">
@@ -77,15 +78,16 @@
           <div class="row" id="article-row">
             <div class="span12">
               <div class="hero-unit">
-                <h2></h2>
-                <span>
-                  <form action="/find-artifacts" method="POST">
-                    <input type="text" name="artifact" size="80" 
-                           placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>
-                    <input type="submit" class="button bg-color-green fg-color-white" value="Find">
+                <h2>Search dependences</h2>
+                <div style="text-align: center;">
+                  <form action="/find-artifacts" method="POST"
+                        class="form-wrapper cf">
+                    <input type="text" name="artifact" size="160" required
+                           placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>                    
+                    <button type="submit">Search</button>
                   </form>
-                  <div id="atrifacts-script"></div>
-                </span>
+                  <div id="atrifacts-script" style="text-align: center; font-size: larger;"></div>
+                </div>
               </div>
 
             </div>
