--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -11,6 +11,7 @@
     <!-- <link href="/css/site.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="/css/prettify.css" rel="stylesheet" type="text/css"> -->
     <link href="/css/search.css" rel="stylesheet" type="text/css">
+    <link href="/css/arrange.css" rel="stylesheet" type="text/css">
 
     <script src="/js/ga.js" async="" type="text/javascript"></script>
     <script type="text/javascript" src="/js/jquery-1.js"></script>
@@ -39,9 +40,12 @@
               <h1>Clojure offline</h1> <!-- Home -->
           </a>
     </div>      
-    <div style="text-align: right; font-size: larger;">
+    <div style="text-align: right; font-size: larger; 
+                position:absolute;
+                right:5px;
+                top:5px;">
           <a href="https://bitbucket.org/kostafey/kostafeys-emacs-confik/src/default/.emacs.d/solutions/clojure-offline.el?at=default">
-            <img src="/images/emacs.ico" width="48" height="48"/><br>
+            <img src="/images/emacs.ico" width="16" height="16"/>
             elisp version</a>
     </div>
 
@@ -58,10 +62,11 @@
                   <form action="/find-artifacts" method="POST"
                         class="form-wrapper cf">
                     <input type="text" name="artifact" size="160" required
-                           placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>                    
+                           placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>
                     <button type="submit">Search</button>
                   </form>
-                  <div id="atrifacts-script" style="text-align: center; font-size: larger;"></div>
+                  <div id="atrifacts-script"
+                       style="text-align: left; font-size: larger;"></div>
                 </div>
               </div>
 
