Remove unused scripts.

--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -6,34 +6,17 @@
                                    width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="keywords" content="clojure offline">
 
-    <!-- <link href="/css/modern.css" rel="stylesheet"> -->
-    <!-- <link href="/css/modern-responsive.css" rel="stylesheet"> -->
-    <!-- <link href="/css/site.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="/css/prettify.css" rel="stylesheet" type="text/css"> -->
     <link href="/css/search.css" rel="stylesheet" type="text/css">
     <link href="/css/arrange.css" rel="stylesheet" type="text/css">
 
-    <script src="/js/ga.js" async="" type="text/javascript"></script>
-    <script type="text/javascript" src="/js/jquery-1.js"></script>
-    <script type="text/javascript" src="/js/jquery_002.js"></script>
-    <script type="text/javascript" src="/js/moment.js"></script>
-    <script type="text/javascript" src="/js/moment_langs.js"></script>
-
-    <script type="text/javascript" src="/js/dropdown.js"></script>
-    <script type="text/javascript" src="/js/accordion.js"></script>
-    <script type="text/javascript" src="/js/buttonset.js"></script>
-    <script type="text/javascript" src="/js/carousel.js"></script>
-    <script type="text/javascript" src="/js/input-control.js"></script>
-    <script type="text/javascript" src="/js/pagecontrol.js"></script>
-    <script type="text/javascript" src="/js/rating.js"></script>
-    <script type="text/javascript" src="/js/slider.js"></script>
-    <script type="text/javascript" src="/js/tile-slider.js"></script>
-    <script type="text/javascript" src="/js/tile-drag.js"></script>
-    <script type="text/javascript" src="/js/calendar.js"></script>
+    <script src="/js/jquery-1.9.1.min.js"></script>
+    <script src="/js/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="/js/helpers.js"></script>
 
     <title>Clojure offline - throw your modem pipboy</title>
   </head>
-  <body class="iron-body" onload="prettyPrint()">
+  <body class="iron-body">
+    <script type="text/javascript" src="/js/main.js"></script>
     
     <div style="text-align: center; font-size: larger;">
           <a href="/">
@@ -77,4 +60,5 @@
 
 
     </div>
+
 </body></html>
