--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -8,6 +8,7 @@
 
     <link href="/css/search.css" rel="stylesheet" type="text/css">
     <link href="/css/arrange.css" rel="stylesheet" type="text/css">
+    <link href="/css/sample.css" type="text/css" rel="stylesheet" media="all">
 
     <script src="/js/jquery-1.9.1.min.js"></script>
     <script src="/js/jquery-ui-1.10.2.custom.min.js"></script>
@@ -16,17 +17,16 @@
     <title>Clojure offline - throw your modem pipboy</title>
   </head>
   <body class="iron-body">
-    <div id="menu"></div>
-
     <script type="text/javascript" src="/js/main.js"></script>
-    
+
+	<div id="content-pane"></div>
 	<div id="menu">
 		<ul class="menu-holder">
-		   <li id="home-button" class="marea">
+		   <li id="home-button" class="marea menu-wrapper">
 				<h3>Home</h3></li>
-			<li id="gstarted-button" class="marea">
+			<li id="gstarted-button" class="marea menu-wrapper">
 				<h3>Quick Start</h3></li>
-			<li class="marea">
+			<li class="marea menu-wrapper">
 				<h3 id="tutorial-button">Documentation/Demos</h3>
 				<ul class="sub">
 					<li class="mitem" id="doc-trans">Standard Transforms</li>
@@ -35,23 +35,22 @@
 					<li class="mitem" id="doc-remote">Remote Templates/Snippets</li>
 					<li class="mitem" id="doc-extract">Getting Data <em>from</em> the DOM</li>
 				</ul></li>
-
+			
 		</ul>
 	</div>
 
-    <div style="text-align: center; font-size: larger;">
-          <a href="/">
-              <h1>Clojure offline</h1> <!-- Home -->
-          </a>
-    </div>      
-    <div style="text-align: right; font-size: larger; 
-                position:absolute;
-                right:5px;
-                top:5px;">
-          <a href="https://bitbucket.org/kostafey/kostafeys-emacs-confik/src/default/.emacs.d/solutions/clojure-offline.el?at=default">
-            <img src="/images/emacs.ico" width="16" height="16"/>
-            elisp version</a>
-    </div>
+	<div id="title">		
+      <span class="head2">Clojure offline</span>
+	</div>
+
+    <!-- <div style="text-align: right; font-size: larger;  -->
+    <!--             position:absolute; -->
+    <!--             right:5px; -->
+    <!--             top:5px;"> -->
+    <!--       <a href="https://bitbucket.org/kostafey/kostafeys-emacs-confik/src/default/.emacs.d/solutions/clojure-offline.el?at=default"> -->
+    <!--         <img src="/images/emacs.ico" width="16" height="16"/> -->
+    <!--         elisp version</a> -->
+    <!-- </div> -->
 
       <div class="page-region-content">
         <div  id="article-grid" class="grid" style="padding-top: 15px;">
