--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -38,6 +38,7 @@
 			
 		</ul>
 	</div>
+    
 
 	<div id="title">		
       <span class="head2">Clojure offline</span>
@@ -52,33 +53,29 @@
     <!--         elisp version</a> -->
     <!-- </div> -->
 
-      <div class="page-region-content">
-        <div  id="article-grid" class="grid" style="padding-top: 15px;">
+    <div class="page-region-content">
+      <div  id="article-grid" class="grid" style="padding-top: 15px;">
 
-          <!-- Everything inside "article-grid" will be deleted! -->
-
-          <div class="row" id="article-row">
-            <div class="span12">
-              <div class="hero-unit">
-                <h2>Search dependences</h2>
-                <div style="text-align: center;">
-                  <form action="/find-artifacts" method="POST"
-                        class="form-wrapper cf">
-                    <input type="text" name="artifact" size="160" required
-                           placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>
-                    <button type="submit">Search</button>
-                  </form>
-                  <div id="atrifacts-script"
-                       style="text-align: left; font-size: larger;"></div>
-                </div>
+         <div class="row" id="article-row">
+          <div class="span12">
+            <div class="hero-unit" id="searcher">
+              <h2>Search dependences</h2>
+              <div style="text-align: center;">
+                <form action="/find-artifacts" method="POST"
+                      class="form-wrapper cf">
+                  <input type="text" name="artifact" size="160" required
+                         placeholder='lein dependency, e.g. [[leiningen-core "2.1.3"]]'/>
+                  <button id="search-button" type="submit">Search</button>
+                </form>
+                <div id="atrifacts-script"
+                     style="text-align: left; font-size: larger;"></div>
               </div>
-
             </div>
+
           </div>
         </div>
       </div>
-
-
     </div>
+
 
 </body></html>
