Markdown parser added.

--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -41,7 +41,7 @@
     
 
 	<div id="title">		
-      <span class="head2">Clojure offline</span>
+      <span id="caption" class="head2">Clojure offline</span>
 	</div>
 
     <!-- <div style="text-align: right; font-size: larger;  -->
