Help: Quick Start added.

--- a/resources/public/html/main.html
+++ b/resources/public/html/main.html
@@ -27,8 +27,8 @@
 			<li id="doc-menu" class="marea menu-wrapper">
 				<h3>Documentation</h3>
                 <ul class="sub">
-				  <li class="mitem" id="gstarted-button">Quick Start</li>
-				  <li class="mitem" id="doc-events">Detail Description</li>
+				  <li class="mitem" id="doc-gstart">Quick Start</li>
+				  <li class="mitem" id="doc-docum">Detail Description</li>
 				  <li class="mitem" id="doc-resources">Useful Resources</li>
 				</ul>
             </li>
